--- a/notebooks/model_trainer.ipynb
+++ b/notebooks/model_trainer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold, KFold\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, LogisticRegression, Lasso\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860  unstable  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X =  smart_grid.drop(['stab', 'stabf'], axis=1)\n",
+    "y = smart_grid[['stab', 'stabf']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=0.2, stratify=y[\"stabf\"], random_state=10)\n",
+    "\n",
+    "# Unsure on how X should be processed at the moment, as power1 = power2+ power3 + power4\n",
+    "X_train_w_pwr = X_train.drop(['power1'], axis=1) # X_train with power - all power columns except power1\n",
+    "X_train_wo_pwr = X_train.drop(['power1', 'power2', 'power3', 'power4'], axis=1) # X_train without power - no power columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# labels for both tasks\n",
+    "clf_y_train, clf_y_test = y_train['stabf'], y_test['stabf']\n",
+    "reg_y_train, reg_y_test = y_train['stab'], y_test['stab']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +400,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860       0  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +424,7 @@
     "\n",
     "delay_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"delay\")]\n",
     "adapt_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"adapt\")]\n",
-    "#power_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"power\")]\n",
+    "power_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"power\")]\n",
     "\n",
     "\n",
     "#print(tau_columns)\n",
@@ -405,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +458,7 @@
        "(10000, 8)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -493,10 +527,10 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.8900\n",
-      "- accuracy score 0.9260\n",
-      "- precision score 0.9145\n",
-      "- recall score 0.8669\n",
+      "- f1 score 0.8877\n",
+      "- accuracy score 0.9240\n",
+      "- precision score 0.9065\n",
+      "- recall score 0.8698\n",
       "===================================\n",
       "\n",
       "\n",
@@ -510,10 +544,10 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.7913\n",
-      "- accuracy score 0.8520\n",
-      "- precision score 0.7717\n",
-      "- recall score 0.8119\n",
+      "- f1 score 0.7947\n",
+      "- accuracy score 0.8540\n",
+      "- precision score 0.7729\n",
+      "- recall score 0.8177\n",
       "===================================\n",
       "\n",
       "\n",
@@ -615,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +686,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.890045</td>\n",
+       "      <td>0.887740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -662,7 +696,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.791255</td>\n",
+       "      <td>0.794655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -676,13 +710,13 @@
       "text/plain": [
        "               Model Name  F1_Score\n",
        "3                     SVC  0.957664\n",
-       "1  RandomForestClassifier  0.890045\n",
+       "1  RandomForestClassifier  0.887740\n",
        "0    KNeighborsClassifier  0.852584\n",
-       "2  DecisionTreeClassifier  0.791255\n",
+       "2  DecisionTreeClassifier  0.794655\n",
        "4      LogisticRegression  0.732984"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,16 +728,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_reg = smart_grid_new[\"stab\"]"
+    "y_reg = smart_grid_new[\"stab\"]\n",
+    "#y_reg = numeric_transformer.fit_transform([y_reg])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -780,6 +815,86 @@
       "- Mean Absolute Error 0.0093\n",
       "- R2 Score Squared Error 0.8821\n",
       "- Root Mean Squared Error 0.0125\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Random Forest Regressor\n",
+      "===================================\n",
+      "Model Performance for Training Set\n",
+      "- Mean Absolute Error 0.0033\n",
+      "- R2 Score Squared Error 0.9866\n",
+      "- Root Mean Squared Error 0.0043\n",
+      "-----------------------------------\n",
+      "\n",
+      "\n",
+      "Model Performance for Test Set\n",
+      "- Mean Absolute Error 0.0085\n",
+      "- R2 Score Squared Error 0.9054\n",
+      "- Root Mean Squared Error 0.0112\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Lasso\n",
+      "===================================\n",
+      "Model Performance for Training Set\n",
+      "- Mean Absolute Error 0.0314\n",
+      "- R2 Score Squared Error 0.0000\n",
+      "- Root Mean Squared Error 0.0370\n",
+      "-----------------------------------\n",
+      "\n",
+      "\n",
+      "Model Performance for Test Set\n",
+      "- Mean Absolute Error 0.0306\n",
+      "- R2 Score Squared Error -0.0006\n",
+      "- Root Mean Squared Error 0.0364\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Ridge\n",
+      "===================================\n",
+      "Model Performance for Training Set\n",
+      "- Mean Absolute Error 0.0175\n",
+      "- R2 Score Squared Error 0.6448\n",
+      "- Root Mean Squared Error 0.0221\n",
+      "-----------------------------------\n",
+      "\n",
+      "\n",
+      "Model Performance for Test Set\n",
+      "- Mean Absolute Error 0.0170\n",
+      "- R2 Score Squared Error 0.6546\n",
+      "- Root Mean Squared Error 0.0214\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "XGBRegressor\n",
+      "===================================\n",
+      "Model Performance for Training Set\n",
+      "- Mean Absolute Error 0.0026\n",
+      "- R2 Score Squared Error 0.9916\n",
+      "- Root Mean Squared Error 0.0034\n",
+      "-----------------------------------\n",
+      "\n",
+      "\n",
+      "Model Performance for Test Set\n",
+      "- Mean Absolute Error 0.0071\n",
+      "- R2 Score Squared Error 0.9325\n",
+      "- Root Mean Squared Error 0.0095\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "CatBoosting Regressor\n",
+      "===================================\n",
+      "Model Performance for Training Set\n",
+      "- Mean Absolute Error 0.0028\n",
+      "- R2 Score Squared Error 0.9889\n",
+      "- Root Mean Squared Error 0.0039\n",
+      "-----------------------------------\n",
+      "\n",
+      "\n",
+      "Model Performance for Test Set\n",
+      "- Mean Absolute Error 0.0047\n",
+      "- R2 Score Squared Error 0.9659\n",
+      "- Root Mean Squared Error 0.0067\n",
       "===================================\n",
       "\n",
       "\n"
@@ -843,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +1000,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.903804</td>\n",
+       "      <td>0.905394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -895,7 +1010,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree Regressor</td>\n",
-       "      <td>0.719302</td>\n",
+       "      <td>0.729996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -920,15 +1035,15 @@
        "                Model Name  R2_Score\n",
        "7    CatBoosting Regressor  0.965857\n",
        "6             XGBRegressor  0.932497\n",
-       "3  Random Forest Regressor  0.903804\n",
+       "3  Random Forest Regressor  0.905394\n",
        "2     KNeighbors Regressor  0.882124\n",
-       "1  Decision Tree Regressor  0.719302\n",
+       "1  Decision Tree Regressor  0.729996\n",
        "5                    Ridge  0.654639\n",
        "0        Linear Regression  0.654637\n",
        "4                    Lasso -0.000564"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
