Fixed bugs in data_ingestion.py

--- a/notebooks/model_trainer.ipynb
+++ b/notebooks/model_trainer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,10 @@
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold, KFold\n",
     "from sklearn.linear_model import LinearRegression, Ridge, LogisticRegression, Lasso\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import RandomizedSearchCV, cross_validate\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
     "import warnings"
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +181,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860  unstable  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +204,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=0.2, stratify=y[\"stabf\"], random_state=10)\n",
+    "X_train,X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y[\"stabf\"], random_state=10)\n",
     "\n",
     "# Unsure on how X should be processed at the moment, as power1 = power2+ power3 + power4\n",
     "X_train_w_pwr = X_train.drop(['power1'], axis=1) # X_train with power - all power columns except power1\n",
@@ -243,13 +246,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
     "# labels for both tasks\n",
     "clf_y_train, clf_y_test = y_train['stabf'], y_test['stabf']\n",
     "reg_y_train, reg_y_test = y_train['stab'], y_test['stab']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_baseline_scores(est_names, X_train, y_train, cv):\n",
+    "    baseline_scores_list = []\n",
+    "    for est_name in est_names:\n",
+    "        pipe = Pipeline(steps=[(\"scaler\", StandardScaler()),\n",
+    "                               (\"estimator\", globals()[est_name])])\n",
+    "        \n",
+    "        est_res = cross_validate(pipe, np.a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_y_train = clf_y_train.replace({'stable':0, 'unstable':1})\n",
+    "clf_y_test= clf_y_test.replace({'stable':0, 'unstable':1})"
    ]
   },
   {
@@ -406,10 +434,10 @@
     }
    ],
    "source": [
-    "dummies = pd.get_dummies(smart_grid[\"stabf\"], dtype='int')\n",
-    "smart_grid_new = pd.concat([smart_grid, dummies], axis=1)\n",
-    "smart_grid_new.drop([\"stabf\", \"unstable\"],axis=1, inplace=True)\n",
-    "smart_grid_new.head()"
+    "\"\"\"dummies = pd.get_dummies(smart_grid[\"stabf\"], dtype='int')\n",
+    "smart_grid = pd.concat([smart_grid, dummies], axis=1)\n",
+    "smart_grid.drop([\"stabf\", \"unstable\"],axis=1, inplace=True)\n",
+    "smart_grid.head()\"\"\""
    ]
   },
   {
@@ -419,20 +447,18 @@
    "outputs": [],
    "source": [
     "# Create Column Transformer with 3 types of transformers\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
-    "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "delay_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"delay\")]\n",
-    "adapt_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"adapt\")]\n",
-    "power_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"power\")]\n",
+    "#delay_columns = smart_grid.columns[smart_grid.columns.str.startswith(\"delay\")]\n",
+    "#adapt_columns = smart_grid.columns[smart_grid.columns.str.startswith(\"adapt\")]\n",
+    "#power_columns = smart_grid.columns[smart_grid.columns.str.startswith(\"power\")]\n",
     "\n",
     "\n",
     "#print(tau_columns)\n",
     "\n",
     "numeric_transformer = StandardScaler()\n",
     "preprocessor = ColumnTransformer([\n",
-    "    (\"delay_scaler\", numeric_transformer, delay_columns),\n",
-    "    (\"adapt_scaler\", numeric_transformer, adapt_columns),\n",
+    "    (\"StandardScalerWithPower\", numeric_transformer, X_train_w_pwr),\n",
+    "    (\"StandardScalerWithoutPower\", numeric_transformer, X_train_wo_pwr),\n",
     "    #(\"power_scaler\", numeric_transformer, power_columns)\n",
     "])"
    ]
@@ -443,8 +469,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_class = smart_grid_new.drop([\"stab\", \"stable\", \"power1\", \"power2\", \"power3\", \"power4\"],axis=1)\n",
-    "y_class = smart_grid_new[\"stable\"]"
+    "#X_class = smart_grid.drop([\"stab\", \"stable\", \"power1\", \"power2\", \"power3\", \"power4\"],axis=1)\n",
+    "#y_class = smart_grid[\"stable\"]"
    ]
   },
   {
@@ -464,7 +490,7 @@
     }
    ],
    "source": [
-    "X_class = preprocessor.fit_transform(X_class)\n",
+    "X_class = preprocessor.fit_transform()\n",
     "X_class.shape"
    ]
   },
